--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  
+  
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "start": "serve -s build",
+    "build": "react-scripts build"
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^10.16.4",
+    "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "lucide-react": "^0.263.1",
-    "framer-motion": "^10.16.4"
+    "serve": "^14.2.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
