--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  
-  
   "scripts": {
     "dev": "vite",
     "start": "serve -s build",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -35,3 +33,4 @@
     "vite": "^4.4.5"
   }
 }
+
